ingress/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: saving-ingress-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: saving-account
spec:
  hosts:
  - "*"
  gateways:
  - saving-ingress-gateway
  http:
  - match:
    - uri:
        exact: /sav_account/.*
    route:
    - destination:
        host: saving-account
        port:
          number: 30002
